--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ header {
     padding: 20px;
     color: white;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
-    position: relative;  /* Allows the absolute positioning of the music button */
 }
 
 h1 {
@@ -145,14 +144,9 @@ body::before {
     font-size: 1.1em;
     cursor: pointer;
     transition: background-color 0.3s;
-    position: absolute;  /* Position the button relative to the header */
-    top: 20px;           /* 20px from the top of the header */
-    left: 50%;           /* Center the button horizontally */
-    transform: translateX(-50%); /* Adjust for perfect centering */
-    z-index: 1000;       /* Ensure it's above other elements */
+    margin-top: 20px;
 }
 
-/* Button hover effect */
 #musicToggleButton:hover {
     background-color: #F44336;
 }
